fix horizontal scrollbar in breadcrumbs when not necessary

--- a/packages/components/src/components/post-popovercontainer/post-popovercontainer.scss
+++ b/packages/components/src/components/post-popovercontainer/post-popovercontainer.scss
@@ -47,6 +47,7 @@
 
   .popover-scroll {
     max-height: var(--post-popovercontainer-available-height, none);
+    overflow-x: clip;
     overflow-y: auto;
   }
 
